copying over the latest changes on main into the production 1.0.2 app: - added version number onto help overlay - improved DnD w timing change and animation indicating row can unfold - DnD bug fix to remove unfold cb after drop has happened - improved startup time by delaying and batching favicon loading - improved performance of search (and probably other things) but caching the displayNode for a BTNode - improved search performance by caching display node order when starting search - improved search performace by only performing extendedSearch on visible nodes - (invisible) bug fix to not ungroup/re-group when a tab refreshes to the same url

--- a/versions/1.0.2/app/bt.css
+++ b/versions/1.0.2/app/bt.css
@@ -550,6 +550,11 @@ textarea:focus, input[type="text"]:focus {
     color: #a0ec5f;
 }
     
+#BTVersion {
+    font-size: 10px;
+    margin-top: -12px;
+    margin-bottom: -3px;
+}
 .settingsInput {
     display: flex;
     justify-content: space-evenly;
